# LIEF

./: .clang-format-ignore  .gitignore  Acknowledgements  CMakeLists.txt  README.md  prek.toml
.github/workflows/: android.yml  code-check.yml  ios.yml  linux-aarch64.yml  linux-x86-64.yml  osx.yml  windows-all.yml  windows-quick.yml
api/python/: CMakeLists.txt  build-requirements.txt  config-default.toml  pyproject.toml
api/python/backend/: dynamic_provider.py  setup.py  versioning.py
api/python/examples/: runtime_android.py  runtime_linux.py  runtime_osx.py  runtime_windows.py
api/python/lief/: COFF.pyi  DEX.pyi  ELF.pyi  MachO.pyi  __init__.pyi  dsc.pyi  objc.pyi
api/python/src/: CMakeLists.txt  pyErr.cpp  pyLIEF.cpp  pyParser.cpp
api/rust/crates/: Cargo.toml
api/rust/examples/: Cargo.toml
cmake/: LIEFConfig.cmake.in  LIEFGit.cmake  LIEFOptions.cmake  LIEFRuntime.cmake
doc/: requirements.txt
doc/code/: README.md
doc/code/cpp/: CMakeLists.txt  abstract.cpp  assembler.cpp  coff.cpp  disassembler.cpp  dsc.cpp  dwarf.cpp  elf.cpp  error_handling.cpp  intro.cpp  logging.cpp  macho.cpp  objc.cpp  pdb.cpp  pe.cpp  pe_debug.cpp  pe_exports.cpp  pe_imports.cpp  pe_resources.cpp  pe_tls.cpp  tuto_authenticode.cpp  tuto_coredump.cpp
doc/code/python/: abstract.py  assembler.py  coff.py  disassembler.py  dsc.py  dwarf.py  elf.py  error_handling.py  intro.py  logging.py  macho.py  objc.py  pdb.py  pe.py  pe_debug.py  pe_exports.py  pe_imports.py  pe_resources.py  pe_tls.py  tuto_android.py  tuto_authenticode.py  tuto_coredump.py  tuto_elf_bin2lib.py  tuto_elf_hooking.py  tuto_elf_plt_got.py  tuto_elf_symbols.py  tuto_frida.py  tuto_macho_mod.py  tuto_pe_hooking.py  tuto_pe_resource.py  tuto_play_formats.py  ty.toml  utilities.py
doc/code/rust/: Cargo.toml
doc/doxygen/: Doxyfile
doc/sphinx/: _cross_api.rst  changelog.rst  compilation.rst  conf.py  installation.rst  intro.rst
doc/sphinx/sphinx_lief_doc/: python_typing.py
doc/sphinx/tutorials/: 06_pe_hooking.rst  07_pe_resource.rst  08_elf_bin2lib.rst  09_frida_lief.rst  11_macho_modification.rst  13_pe_authenticode.rst
examples/cpp/: CMakeLists.txt  runtime_android.cpp  runtime_linux.cpp  runtime_osx.cpp  runtime_windows.cpp
include/LIEF/: LIEF.hpp  ObjC.hpp  config.h.in  endianness_support.hpp  errors.hpp  iostream.hpp  iterators.hpp  platforms.hpp  runtime.hpp  to_json.hpp
include/LIEF/Abstract/: Parser.hpp  json.hpp
include/LIEF/BinaryStream/: BinaryStream.hpp  DumpStream.hpp  MemoryStream.hpp  SpanStream.hpp  VectorStream.hpp
include/LIEF/COFF/: AuxiliarySymbol.hpp  Parser.hpp  ParserConfig.hpp  RegularHeader.hpp  Symbol.hpp  utils.hpp
include/LIEF/DWARF/: Parameter.hpp
include/LIEF/ELF/: Binary.hpp  DynamicEntryRpath.hpp  DynamicEntryRunPath.hpp  GnuHash.hpp  Parser.hpp  Section.hpp  Segment.hpp  Symbol.hpp  (+2 more)
scripts/metrics/: requirements.txt
src/: CMakeLists.txt  errors.cpp  hash_stream.hpp  internal_utils.cpp  iostream.cpp  json_api.cpp  logging.cpp  mbedtls_wraps.h  messages.hpp  utils.cpp
src/BinaryStream/: CMakeLists.txt  DumpStream.cpp  MemoryStream.cpp
src/COFF/: BigObjHeader.cpp  Binary.cpp  Header.cpp  Parser.cpp  RegularHeader.cpp  Section.cpp  utils.cpp
src/DEX/: Parser.tcc  json_internal.hpp
src/DWARF/: dwarf.cpp
src/ELF/: Binary.cpp  Builder.cpp  Builder.tcc  CMakeLists.txt  ExeLayout.hpp  GnuHash.cpp  Note.cpp  Parser.cpp  Parser.tcc  Structures.hpp  Symbol.cpp  elf_utils.cpp  elf_utils.hpp  layout_check.cpp
src/MachO/: Binary.cpp  BinaryParser.tcc  Builder.cpp  ChainedFixup.cpp  DyldInfo.cpp  FunctionVariants.cpp  Parser.cpp  Section.cpp  ThreadLocalVariables.cpp  layout_check.cpp  utils.cpp
src/OAT/: Parser.tcc  json_internal.hpp
src/ObjC/: objc.cpp
src/PE/: Binary.cpp  DelayImport.cpp  Export.cpp  ExportEntry.cpp  ImportEntry.cpp  Parser.cpp  Parser.tcc  ParserConfig.cpp  Relocation.cpp  RichEntry.cpp  RichHeader.cpp  Section.cpp  TLS.cpp
src/VDEX/: Parser.tcc  json_internal.hpp
src/fmt_formatter/: error_code.hpp  filesystem.hpp
src/runtime/: CMakeLists.txt  no_runtime.cpp
src/runtime/android/: CMakeLists.txt  Host.cpp  Memory.cpp  Module.cpp  Process.cpp  Property.cpp  no_runtime.cpp
src/runtime/disassembler/: CMakeLists.txt  no_assembler.cpp  no_disassembler.cpp
src/runtime/linux/: CMakeLists.txt  Host.cpp  Memory.cpp  Module.cpp  Process.cpp  no_runtime.cpp
src/runtime/linux_android_shared/: CMakeLists.txt  Process.cpp  Process.hpp  no_runtime.cpp
src/runtime/osx/: CMakeLists.txt  Host.cpp  Host_utils.mm  Memory.cpp  Module.cpp  Process.cpp  common.cpp  no_runtime.cpp  utils.h  utils.mm
src/runtime/windows/: CMakeLists.txt  Host.cpp  LdrDataTableEntry.cpp  Memory.cpp  Module.cpp  PEB.cpp  Process.cpp  common.cpp  injector.cpp  no_runtime.cpp
tests/: CMakeLists.txt  conftest.py  requirements.txt  run_pytest.py  utils.py
tests/api/: test_python_bindings.py
tests/coff/: test_coff_strings.py
tests/elf/: test_corrupted.py  test_from_dump.py  test_issues.py  test_mipself.py  test_notes.py  test_parse_from_memory.py  test_relr_relocations.py  test_symbol_versions.py
tests/macho/: test_from_dump.py  test_issues.py
tests/objc/: test_ios_droidguard.py  test_objc_category.py  test_objc_non_regression.py
tests/pe/: test_delay_imports.py  test_from_dump.py  test_loadconfig.py  test_parser.py
tests/runtime/: test_android_runtime.py  test_host.py  test_memory.py  test_process.py
tests/runtime/android/lib/: simple.cpp
tests/runtime/linux/: test_linux_host.py  test_linux_modules.py  test_linux_process.py
tests/runtime/linux/lib/: CMakeLists.txt
tests/runtime/osx/: test_osx_host.py  test_osx_modules.py  test_osx_process.py
tests/runtime/windows/: test_injector.py  test_win_host.py  test_win_modules.py  test_win_process.py
tests/runtime/windows/lib/: CMakeLists.txt  simple.cpp
tests/unittests/: CMakeLists.txt  test_iostream.cpp  test_runtime_linux.cpp
tools/: Cargo.toml
tools/common/: Cargo.toml
tools/common/src/: version.rs
tools/lief-patchelf/: Cargo.toml  README.md
tools/lief-patchelf/src/: main.rs
(+487 files in other folders)
