[workspace.package]
authors      = ["Romain Thomas <me@romainthomas.fr>"]
license      = "Apache-2.0"
version      = "2.0.0"
edition      = "2024"
rust-version = "1.85.0"
homepage     = "https://lief.re"
repository   = "https://github.com/lief-project/LIEF"

[workspace]
members = [
  "common",
  "lief-patchelf",
]
resolver = "3"

[workspace.dependencies]
common        = { path = "common" }
lief          = { path = "../api/rust/crates/lief" }
anyhow        = "1.0.102"
clap          = "4.6.1"
clap_complete = "4.6.5"
clap_mangen   = "0.3.0"
thiserror     = "2.0.18"
indoc         = "2.0.7"

[profile.release]
debug-assertions = false
overflow-checks  = false
incremental      = false
codegen-units    = 16
strip            = "symbols"
lto              = "fat"
panic            = "abort"
